# telebot_rzd

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  config.py
backend/backend/: settings.py  urls.py
backend/bot/: admin.py  models.py  serializers.py  urls.py  views.py
devops/: default.conf
telebot/: Dockerfile  config.py  main.py  test.py
telebot/core/: keyboards.py
telebot/core/commands/: base.py  callback.py  commands.py
telebot/core/commands/utils/: callback_factory.py  send_file.py
